package com.indraazimi.mobpro2

interface Platform {
    val name: String
}

expect fun getPlatform(): Platform